Fix: User profile scrollbar showing when not needed

--- a/src/components/modal/_profile.scss
+++ b/src/components/modal/_profile.scss
@@ -70,6 +70,7 @@
 // Body
 #user-profile-modal .scroller{
     background-color: $b1;
+    overflow-y: auto;
 }
 #user-profile-modal .guilds .section .section-header{
     color: #FFF;
